# traitly

./: .gitignore  README.md  README_ES.md  __init__.py  documentation.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  traitly-examples.ipynb
docs/: documentacion.md  documentation.md  documentation_ES.md
internal_structure/: analyzing_image.py  symmetry.py
package_data/config/: requirements.txt
src/: example.ipynb
src/traitly/: __init__.py  cli.py
src/traitly/internal_structure/: __init__.py  analysis.py  analyzing_image.py  annotated_image.py  geometry.py  processing.py  symmetry.py
src/traitly/utils/: __init__.py  common_functions.py  convert_pdf.py
tests/: analyze_folder.py  analyze_single_image.py
tests/sample_data/Results/: all_results.csv  error_report.csv  session_report.txt
traitly/internal_structure/: analysis.py  annotated_image.py  geometry.py  mask.py  processing.py
traitly/package_data/config/: requirements-dev.txt  setup-torch.py
traitly/utils/: common_functions.py
